# WhoisDomain

./: .gitignore  .pylintrc  11  CLAUDE_TODO  Df-36  Docker.md  Dockerfile  Dockerfile-py36  Dockerfile-test  Future.txt  Historical.txt  LICENSE  Makefile  Makefile.docker  Makefile.inc  Makefile.pypi  Makefile.tests  README.md  TODO  Updates.md  analizeIanaTld.py  build.sh  data_response.py  ianaCrawler.py  index.html  investigateTld.py  jj.sh  lint.txt  m2.py  make_test.sh  mt.pl  out2  pylint.txt  pypi-test.sh  pypi.sh  pyproject.toml  pyproject.toml-template  reformat-code.sh  requirements.txt  rl-secure-list-1.20230503.1.txt  (+18 more)
.github/: dependabot.yml
.github/workflows/: create-release-from-tag.yml  lint.yml  makefile.yml
Old/: MANIFEST.in  analize_patterns.py  compare_known_tld.py  mt.pl  ta.sh  test.py  test3.py  testExtend.py
analizer/: Makefile  README.md  analizeIanaTld.py  get_registrars.py  ianaCrawler.py  ianaDatabase.py  investigateTld.py  investigateTld.py--  oneTld.py  pslGrabber.py  pyproject.toml  registrar-ids-1.csv  requirements.txt
analizer/vtmp/: pyvenv.cfg
docs/: Updates.md  index.html
rlsecure/: list-1.20230504.1.txt  report.cyclonedx.json  report.rl.json  report.sarif.json  status-1.20230504.1.txt
rlsecure/rl-html/: sdlc.html
testdata/: 11  DOMAINS.txt  _make_testdata.sh  _make_testdata2.sh  make_testdata.sh
testdata/amnic.net/: input  nameservers  output
testdata/anadolu.edu.tr/: input  nameservers  output
testdata/chula.ac.th/: input  nameservers  output
testdata/dergipark.org.tr/: input  nameservers  output
testdata/dns.lu/: input  nameservers  output
testdata/domena.pl/: input
testdata/example.org/: input  output
testdata/google.be/: input
testdata/google.com/: input  output
testdata/google.com.et/: input  nameservers  output
testdata/google.com.tr/: input  nameservers  output
testdata/google.hr/: input  nameservers  output
testdata/google.nl/: input  nameservers  output
testdata/google.xn--kprw13d/: output
testdata/google.xn--kpry57d/: output
testdata/google.台湾/: input  nameservers  output
testdata/google.台灣/: nameservers  output
testdata/group.bnpparibas/: input  nameservers  output
testdata/hello.xyz/: input  output
testdata/hkirc.hk/: input  nameservers  output
testdata/iac.spb.ru/: input  nameservers  output
testdata/icu.ac.jp/: input  nameservers  output
testdata/imperial.ac.uk/: input  nameservers  output
testdata/isnic.is/: input  nameservers  output
testdata/livedns.co.uk/: input  nameservers  output
testdata/marnet.mk/: input  nameservers  output
testdata/meta.co.jp/: nameservers
testdata/meta.co.uk/: input  nameservers
testdata/meta.com/: input  nameservers
testdata/meta.com.tr/: input
testdata/meta.jp/: diff.out2  input  nameservers  test.out2
testdata/meta.kr/: nameservers
testdata/mining.com.ru/: input  nameservers  output
testdata/net.ae/: input  nameservers  output
testdata/net.tw/: input  nameservers  output
testdata/net.ye/: input  nameservers  output
testdata/ngtld.cn/: input  nameservers  output
testdata/nic.aarp/: input  nameservers  output
testdata/nic.abbott/: input  nameservers  output
testdata/nic.abbvie/: input  nameservers  output
testdata/nic.abc/: input  nameservers  output
testdata/nic.abogado/: nameservers  output
testdata/nic.abudhabi/: input  nameservers  output
testdata/nic.accountant/: input  nameservers  output
testdata/nic.aco/: input  nameservers  output
testdata/nic.ad.jp/: input  nameservers  output
testdata/nic.ads/: nameservers  output
testdata/nic.adult/: input  nameservers  output
testdata/nic.aeg/: input  nameservers  output
testdata/nic.afl/: input  nameservers  output
testdata/nic.africa/: input  nameservers  output
testdata/nic.agakhan/: input  nameservers  output
testdata/nic.airbus/: input  nameservers  output
testdata/nic.airtel/: input  nameservers  output
testdata/nic.akdn/: input  nameservers  output
testdata/nic.alibaba/: input  nameservers  output
testdata/nic.alipay/: input  nameservers  output
testdata/nic.allfinanz/: nameservers  output
testdata/nic.allstate/: input  nameservers  output
testdata/nic.ally/: input  nameservers  output
testdata/nic.alsace/: input  nameservers  output
testdata/nic.alstom/: input  nameservers  output
testdata/nic.amazon/: input  nameservers  output
testdata/nic.americanfamily/: input  nameservers  output
testdata/nic.amfam/: input  nameservers  output
testdata/nic.amsterdam/: input  nameservers  output
testdata/nic.android/: nameservers  output
testdata/nic.anz/: input  nameservers  output
testdata/nic.aol/: input  nameservers  output
testdata/nic.aquarelle/: input  nameservers  output
testdata/nic.ar/: input  nameservers  output
testdata/nic.arab/: input  nameservers  output
testdata/nic.archi/: nameservers  output
testdata/nic.arte/: input  nameservers  output
testdata/nic.asda/: input  nameservers  output
testdata/nic.at/: input  nameservers  output
testdata/nic.audible/: input  nameservers  output
testdata/nic.auspost/: input  nameservers  output
testdata/nic.author/: input  nameservers  output
testdata/nic.aws/: input  nameservers  output
testdata/nic.baidu/: input  nameservers  output
testdata/nic.barcelona/: input  nameservers  output
testdata/nic.barclaycard/: input  nameservers  output
testdata/nic.barclays/: input  nameservers  output
tests/: Makefile  memtest.py  memtest.pyy  t1.py  test-facebook-tld.py  test-google-tld.py  testCache.py  testFR.py  testWithRedacted.py
vtmp/: pyvenv.cfg
whoisdomain/: _0_init_tld.py  _1_query.py  _2_parse.py  _3_adjust.py  __init__.py  cacheSimple.py  dataContext.py  doParse.py  doQuery.py  doWhoisCommand.py  domain.py  exceptions.py  handleDateStrings.py  helpers.py  lastWhois.py  main.py  parameterContext.py  procFunc.py  processWhoisDomainRequest.py  redisCache.py  simpleCacheBase.py  simpleCacheWithFile.py  tldInfo.py  tld_regexpr.py  version.py  whoisCliInterface.py  whoisParser.py  whois_rdap.py  whoisdomain.py
work/: version
(+1531 files in other folders)
