[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "whoisdomain"
    dynamic = ['version']

    authors = [
      { name="mboot-github"},
    ]

    maintainers = [
      { name="Maarten Boot", email="130295084+mboot-github@users.noreply.github.com" },
    ]

    description = "Python package for retrieving WHOIS information of domains."
    readme = "README.md"
    requires-python = ">=3.10"

    license = "MIT"

    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Environment :: Console",
        "Programming Language :: Python :: 3",
        "Topic :: Internet",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

    keywords = [
        "Python",
        "whois",
        "tld",
        "domain",
        "expiration",
        "registrar",
    ]

[project.scripts]
    whoisdomain = 'whoisdomain.main:main'

[project.urls]
    "Bug Tracker" = "https://github.com/mboot-github/WhoisDomain/issues"
    "Home Page" = "https://github.com/mboot-github/WhoisDomain/"
    "Repository" = "https://github.com/mboot-github/WhoisDomain/"

[tool.hatch.version]
    path = "whoisdomain/version.py"

[tool.hatch.build]
    only-packages = true

    include = [
        "whoisdomain/",
    ]

    exclude = [
        "/Old/*",
        "/lib/*",
        "/etc/*",
        "/bin/*",
        "/testdata/*",
        "Makefile",
        ".gitignore",
        "/.gitignore",
    ]

[tool.ruff]
    target-version = "py310"
    line-length = 160
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "venv",
    ]

[tool.ruff.lint]
    select = [
       "AIR",
       "FAST",
       "YTT",
       "ASYNC",
       "S1", "S2", "S302", "S303", "S304", "S305", "S306", "S307", "S31", "S32", "S401", "S402", "S406", "S407", "S408", "S409", "S41", "S5", "S601", "S602", "S604", "S605", "S606", "S607", "S609", "S61", "S7",
       "FBT",
       "B00", "B01", "B020", "B021", "B022", "B023", "B025", "B027", "B028", "B029", "B03", "B901", "B903", "B905", "B911",
       "A",
       "COM",
       "C4",
       "DTZ003", "DTZ004", "DTZ012", "DTZ901",
       "T10",
       "DJ003", "DJ01",
       "EM",
       "EXE",
       "FIX",
       "FA",
       "INT",
       "ISC",
       "ICN",
       "LOG",
       "G001", "G002", "G01", "G1", "G2",
       "INP",
       "PIE",
       "T20",
       "PYI",
       "PT",
       "Q",
       "RSE",
       "RET",
       "SIM",
       "SLOT",
       "TID",
       "TD001", "TD004", "TD005", "TD007",
       "TC",
       "ARG003", "ARG004", "ARG005",
       "PTH",
       "FLY",
       "I",
       "C90",
       "NPY",
       "PD",
       "N803", "N804", "N805", "N811", "N812", "N813", "N814", "N817", "N818", "N999",
       "PERF1", "PERF2", "PERF401",
       "E",
       "W",
       "DOC202", "DOC403", "DOC502",
       "D2", "D3", "D402", "D403", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416",
       "F",
       "PGH",
       "PLC",
       "PLE",
       "PLR01", "PLR02", "PLR04", "PLR0915", "PLR1711", "PLR1704", "PLR1714", "PLR1716", "PLR172", "PLR173", "PLR2044", "PLR5", "PLR6104", "PLR6201",
       "PLW",
       "UP",
       "FURB",
       "RUF",
       "TRY003", "TRY004", "TRY2", "TRY300", "TRY401",
    ]

    ignore = [
        # ignore for now:
        "S101", "N803", "N999", "PLR6201",
        "S602", "FBT002", "FBT001", "RUF001", "N812", "PLW0603", "PLW0602",
        "PLW2901", "PIE810", "PERF203", "FIX004", "N818",
        "RUF067",
        # end for now.
        "COM812", "D203",
        "T201",   # print statements are ok
        "SIM102",
        "RUF012",
        "D205",
        "FIX002",  # TODOs need some love but we will probably not get of them
        "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
        "PT028",  # experimental rule, incomplete
    ]

    # Allow autofix for all enabled rules (when `--fix`) is provided.
    fixable = ["ALL"]
    unfixable = []
    preview = true
