[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "whoisdomain"
    dynamic = ['version']

    authors = [
      { name="mboot-github"},
    ]

    maintainers = [
      { name="Maarten Boot", email="130295084+mboot-github@users.noreply.github.com" },
    ]

    description = "Python package for retrieving WHOIS information of domains."
    readme = "README.md"
    requires-python = ">=3.10"

    license = "MIT"

    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Environment :: Console",
        "Programming Language :: Python :: 3",
        "Topic :: Internet",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

    keywords = [
        "Python",
        "whois",
        "tld",
        "domain",
        "expiration",
        "registrar",
    ]

[project.scripts]
    whoisdomain = 'whoisdomain.main:main'

[project.urls]
    "Bug Tracker" = "https://github.com/mboot-github/WhoisDomain/issues"
    "Home Page" = "https://github.com/mboot-github/WhoisDomain/"
    "Repository" = "https://github.com/mboot-github/WhoisDomain/"

[tool.hatch.version]
    path = "whoisdomain/version.py"

[tool.hatch.build]
    only-packages = true

    include = [
        "whoisdomain/",
    ]

    exclude = [
        "/Old/*",
        "/lib/*",
        "/etc/*",
        "/bin/*",
        "/testdata/*",
        "Makefile",
        ".gitignore",
        "/.gitignore",
    ]

[tool.ruff]
    target-version = "py310"
    line-length = 160
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "venv",
    ]

[tool.ruff.lint]
    select = [
        "A",
        "AIR",
        "ARG",
        "ASYNC",
        "B",
        "C",
        "COM",
        "D",
        "DJ",
        "DOC",
        "DTZ",
        "E",
        "EM",
        "EXE",
        "F",
        "FA",
        "FAST",
        "FBT",
        "FIX",
        "FLY",
        "FURB",
        "G",
        "I",
        "ICN",
        "INP",
        "INT",
        "ISC",
        "LOG",
        "N",
        "NPY",
        "PD",
        "PERF",
        "PGH",
        "PIE",
        "PLC",
        "PLE",
        "PLR",
        "PLW",
        "PT",
        "PTH",
        "PYI",
        "Q",
        "RET",
        "RSE",
        "RUF",
        "S",
        "SIM",
        "SLOT",
        "T",
        "TC",
        "TD",
        "TID",
        "TRY",
        "UP",
        "W",
        "YTT",
    ]

    ignore = [
        # ignore for now:
        "ARG002","ARG001",
        "D107","D102","D101","D103","D100","D105","D104","D205","D203",
        "N812","N818","N806","N802","N815","N816","N803","N999",
        "PLR6201","PLR2004","PLR0917","PLR0913","PLR0911","PLR0912","PLR0914",
        "PLW0603", # Using the global statement to update `xxx` is discouraged
        "PLW0602", # Using global for `xxx` but no assignment is done
        "RUF001","RUF067", "RUF012",
        "S101","S602",

        #
        "COM812", # The following rule may cause conflicts when used with the formatter: `COM812`
        "T201",   # print statements are ok, used in verbose mode
        "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
        "PT028",  # experimental rule, incomplete
    ]

    # Allow autofix for all enabled rules (when `--fix`) is provided.
    fixable = ["ALL"]
    unfixable = []
    preview = true
